--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
 		<meta content="target-densitydpi=high-dpi,width=device-width,initial-scale=1" name="viewport" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<link href="bin/sumeru.css" rel="stylesheet"></link>
+		<link href="bin/app.css" rel="stylesheet"></link>
 		<script src="bin/sumeru.js"></script>
         <script src="bin/app.js"></script>
 	</head>
